--- a/fetch_coll_spheres.yaml
+++ b/fetch_coll_spheres.yaml
@@ -1,5 +1,6 @@
 collision_spheres:
   shoulder_pan_link:
+    ignore_collision: false
     spheres:
       - [0.0, 0.0, -0.14, 0.06]
       - [0.0, 0.0, -0.105, 0.06]
@@ -10,6 +11,7 @@ collision_spheres:
       - [0.045, -0.04, 0.07, 0.06]
       - [0.085, -0.03, 0.07, 0.06]
   shoulder_lift_link:
+    ignore_collision: false
     spheres:
       - [0.0, -0.039, 0.0, 0.065]
       - [0.0, -0.013, 0.0, 0.065]
@@ -20,12 +22,14 @@ collision_spheres:
       - [0.124, 0.0, 0.0, 0.055]
       - [0.158, 0.0, 0.0, 0.055]
   upperarm_roll_link:
+    ignore_collision: false
     spheres:
       - [-0.03, 0.0, 0.0, 0.055]
       - [0.0, 0.0, 0.0, 0.055]
       - [0.05, -0.02, 0.0, 0.055]
       - [0.08, -0.02, 0.0, 0.055]
   elbow_flex_link:
+    ignore_collision: false
     spheres:
       - [0, -0.035, 0, 0.06]
       - [0, 0.005, 0, 0.06]
@@ -34,6 +38,7 @@ collision_spheres:
       - [0.1, 0.0, 0, 0.06]
       - [0.14, 0.0, 0, 0.06]
   forearm_roll_link:
+    ignore_collision: false
     spheres:
       - [-0.02, 0, 0, 0.06]
       - [0.0, -0.02, 0, 0.05]
@@ -41,6 +46,7 @@ collision_spheres:
       - [+0.05, -0.04, 0, 0.05]
 
   wrist_flex_link:
+    ignore_collision: false
     spheres:
       - [0.0, -0.05, 0, 0.06]
       - [0.0, -0.01, 0, 0.06]
@@ -49,6 +55,7 @@ collision_spheres:
       - [0.076, 0, 0, 0.06]
       - [0.119, 0, 0, 0.06]
   gripper_link:
+    ignore_collision: false
     spheres:
       - [-0.065, 0.0, 0.0, 0.05]
       - [-0.065, 0.03, 0.0, 0.05]
@@ -60,12 +67,38 @@ collision_spheres:
       - [-0.13, 0.03, 0.0, 0.05]
       - [-0.13, -0.03, 0.0, 0.05]
   l_gripper_finger_link:
+    ignore_collision: false
     spheres:
       - [0.02, 0.01, 0.0, 0.02]
       - [-0.005, 0.01, 0.0, 0.02]
       - [-0.03, 0.01, 0.0, 0.02]
   r_gripper_finger_link:
+    ignore_collision: false
     spheres:
       - [0.02, -0.01, 0.0, 0.02]
       - [-0.005, -0.01, 0.0, 0.02]
       - [-0.03, -0.01, 0.0, 0.02]
+  head_pan_link:
+    ignore_collision: true
+    spheres:
+      - [-0.02625,     0.03,        0.04956858    ,0.08]
+      - [0.03375 ,   0.03  ,     0.04956858       ,0.08]
+      - [0.09375 ,   0.03  ,     0.04956858       ,0.08]
+      - [0.15375 ,   0.03  ,     0.04956858       ,0.08]
+      - [-0.02625,     0.09,        0.04956858    ,0.08]
+      - [0.03375 ,   0.09  ,     0.04956858       ,0.08]
+      - [0.09375 ,   0.09  ,     0.04956858       ,0.08]
+      - [0.15375 ,   0.09  ,     0.04956858       ,0.08]
+      - [-0.02625,    -0.03,        0.04956858    ,0.08]
+      - [ 0.03375,    -0.03,        0.04956858    ,0.08]
+      - [ 0.09375,    -0.03,        0.04956858    ,0.08]
+      - [ 0.15375,    -0.03,        0.04956858    ,0.08]
+      - [-0.02625,    -0.09,        0.04956858    ,0.08]
+      - [ 0.03375,    -0.09,        0.04956858    ,0.08]
+      - [ 0.09375,    -0.09,        0.04956858    ,0.08]
+      - [ 0.15375,    -0.09,        0.04956858    ,0.08]
+  torso_lift_link:
+    ignore_collision: true
+    spheres:
+      - [0.006875, 0.,       0.55257, 0.1]
+      - [0.036875, 0.,       0.59257, 0.1]
