Load self collision pair from yaml

--- a/fetch_coll_spheres.yaml
+++ b/fetch_coll_spheres.yaml
@@ -1,3 +1,22 @@
+self_collision_pairs:
+  - [head_pan_link,   shoulder_pan_link]
+  - [head_pan_link,   shoulder_lift_link]
+  - [head_pan_link,   upperarm_roll_link]
+  - [head_pan_link,   elbow_flex_link]
+  - [head_pan_link,   forearm_roll_link]
+  - [head_pan_link,   wrist_flex_link]
+  - [head_pan_link,   gripper_link]
+  - [head_pan_link,   l_gripper_finger_link]
+  - [head_pan_link,   r_gripper_finger_link]
+  - [torso_lift_link, shoulder_pan_link]
+  - [torso_lift_link, shoulder_lift_link]
+  - [torso_lift_link, upperarm_roll_link]
+  - [torso_lift_link, elbow_flex_link]
+  - [torso_lift_link, forearm_roll_link]
+  - [torso_lift_link, wrist_flex_link]
+  - [torso_lift_link, gripper_link]
+  - [torso_lift_link, l_gripper_finger_link]
+  - [torso_lift_link, r_gripper_finger_link]
 collision_spheres:
   shoulder_pan_link:
     ignore_collision: false
