Wrapped by python

--- a/python/fused/conf/fetch_conf.yaml
+++ b/python/fused/conf/fetch_conf.yaml
@@ -1,3 +1,15 @@
+urdf_path: ~/.skrobot/fetch_description/fetch.urdf
+
+control_joint_names:
+  - torso_lift_joint
+  - shoulder_pan_joint
+  - shoulder_lift_joint
+  - upperarm_roll_joint
+  - elbow_flex_joint
+  - forearm_roll_joint
+  - wrist_flex_joint
+  - wrist_roll_joint
+
 self_collision_pairs:
   - [head_pan_link,   shoulder_pan_link]
   - [head_pan_link,   shoulder_lift_link]
