rename2 fused to plainmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ include_directories("primitive_sdf")
 
 file(GLOB_RECURSE SRC_FILES cpp/*.cpp)
 add_subdirectory(pybind11)
-pybind11_add_module(_fused ${SRC_FILES})
-target_link_libraries(_fused PRIVATE tinyfk)
-install(TARGETS _fused DESTINATION .)
+pybind11_add_module(_plainmp ${SRC_FILES})
+target_link_libraries(_plainmp PRIVATE tinyfk)
+install(TARGETS _plainmp DESTINATION .)
