--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -39,3 +39,8 @@ jobs:
                 pip install pytest
                 python3 -c "from skrobot.models.fetch import Fetch; Fetch()"  # create cache
                 pytest python
+
+            - name: Run examples
+              run: |
+                python3 example/fetch_ik.py
+                python3 example/fetch_plan.py
